docs/kubernetes/devops/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
# for deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    # for pods
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
